# temizlik_robotu_metapaket

./: README.md
evarobotmove_gazebo/launch/: move.launch  start_gazebo.launch  temizlik_robotu.launch
temizlik_robotu/: CMakeLists.txt  package.xml
temizlik_robotu_baslat/: CMakeLists.txt  package.xml
temizlik_robotu_baslat/launch/: temizlik_robotu_baslat.launch
temizlik_robotu_bilgi_servisi/: CMakeLists.txt  package.xml  setup.py
temizlik_robotu_bilgi_servisi/launch/: temizlik_robotu_bilgi_servisi_baslat.launch
temizlik_robotu_engelden_sakinma/: CMakeLists.txt  package.xml  setup.py
temizlik_robotu_engelden_sakinma/launch/: temizlik_robotu_engelden_sakinma_baslat.launch
temizlik_robotu_engelden_sakinma/params/: parametreler.yaml
temizlik_robotu_engelden_sakinma/src/temizlik_robotu_engelden_sakinma/: temizlik_robotu_engelden_sakinma_dugumu.py
temizlik_robotu_mesafe_hesaplama/: CMakeLists.txt  package.xml  setup.py
temizlik_robotu_mesafe_hesaplama/launch/: temizlik_robotu_mesafe_hesaplama_baslat.launch
temizlik_robotu_msgs/: CMakeLists.txt  package.xml
temizlik_robotu_msgs/srv/: EngelBilgi.srv
temizlik_robotu_supurme/: CMakeLists.txt  package.xml  setup.py
temizlik_robotu_supurme/launch/: temizlik_robotu_supurme_baslat.launch
temizlik_robotu_supurme/params/: gorevler.yaml  parametreler.yaml
temizlik_robotu_supurme/src/temizlik_robotu_supurme/: temizlik_robot_islevler.py  (+2 more)
temizlik_robotu_viz/: CMakeLists.txt  package.xml
temizlik_robotu_viz/launch/: temizlik_robotu_rviz_baslat.launch
temizlik_robotu_viz/rviz/: temizlik_robotu_rviz.rviz
(+2 files in other folders)
