<?xml version="1.0"?>
<package>
  <name>temizlik_robotu_viz</name>
  <version>0.0.0</version>
  <description>The temizlik_robotu_viz package</description>

  <maintainer email="hakan.gencturk@inovasyonmuhendislik.com">Hakan GENCTURK</maintainer>


  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>rviz</run_depend>

  <export>
  </export>
</package>
